a friendly meta commit, #253169

--- a/.gitmodules
+++ b/.gitmodules
@@ -32044,6 +32044,9 @@
 [submodule "um/ok/age"]
 	path = um/ok/age
 	url = .
+[submodule "um/ox/ehe"]
+	path = um/ox/ehe
+	url = .
 [submodule "um/pu/enj"]
 	path = um/pu/enj
 	url = .
