a friendly meta commit, #253468

--- a/.gitmodules
+++ b/.gitmodules
@@ -28090,6 +28090,9 @@
 [submodule "rv/pv/gal"]
 	path = rv/pv/gal
 	url = .
+[submodule "rv/pw/bku"]
+	path = rv/pw/bku
+	url = .
 [submodule "rv/qs/oes"]
 	path = rv/qs/oes
 	url = .
