a friendly meta commit, #254004

--- a/.gitmodules
+++ b/.gitmodules
@@ -37234,6 +37234,9 @@
 [submodule "xv/le/kdg"]
 	path = xv/le/kdg
 	url = .
+[submodule "xv/ln/uwg"]
+	path = xv/ln/uwg
+	url = .
 [submodule "xv/ni/jhb"]
 	path = xv/ni/jhb
 	url = .
