a friendly meta commit, #253460

--- a/.gitmodules
+++ b/.gitmodules
@@ -24400,6 +24400,9 @@
 [submodule "pm/bv/oxl"]
 	path = pm/bv/oxl
 	url = .
+[submodule "pm/dk/zab"]
+	path = pm/dk/zab
+	url = .
 [submodule "pm/ee/hkx"]
 	path = pm/ee/hkx
 	url = .
