--- a/.gitmodules
+++ b/.gitmodules
@@ -29110,6 +29110,9 @@
 [submodule "sm/wx/nje"]
 	path = sm/wx/nje
 	url = .
+[submodule "sm/xl/aoo"]
+	path = sm/xl/aoo
+	url = .
 [submodule "sm/zr/xrl"]
 	path = sm/zr/xrl
 	url = .
