a friendly meta commit, #253500

--- a/.gitmodules
+++ b/.gitmodules
@@ -9952,6 +9952,9 @@
 [submodule "gg/zv/yjt"]
 	path = gg/zv/yjt
 	url = .
+[submodule "gh/ff/qse"]
+	path = gh/ff/qse
+	url = .
 [submodule "gh/fo/ydi"]
 	path = gh/fo/ydi
 	url = .
