a friendly meta commit, #254446

--- a/.gitmodules
+++ b/.gitmodules
@@ -36082,6 +36082,9 @@
 [submodule "xc/hn/riu"]
 	path = xc/hn/riu
 	url = .
+[submodule "xc/iy/jno"]
+	path = xc/iy/jno
+	url = .
 [submodule "xc/ky/sbg"]
 	path = xc/ky/sbg
 	url = .
