a friendly meta commit, #254419

--- a/.gitmodules
+++ b/.gitmodules
@@ -5989,6 +5989,9 @@
 [submodule "dt/qc/bar"]
 	path = dt/qc/bar
 	url = .
+[submodule "dt/qg/xgq"]
+	path = dt/qg/xgq
+	url = .
 [submodule "dt/rl/uqt"]
 	path = dt/rl/uqt
 	url = .
