a friendly meta commit, #251689

--- a/.gitmodules
+++ b/.gitmodules
@@ -2473,6 +2473,9 @@
 [submodule "bp/ab/khj"]
 	path = bp/ab/khj
 	url = .
+[submodule "bp/ag/ymy"]
+	path = bp/ag/ymy
+	url = .
 [submodule "bp/ay/xzk"]
 	path = bp/ay/xzk
 	url = .
