--- a/.gitmodules
+++ b/.gitmodules
@@ -26533,6 +26533,9 @@
 [submodule "qx/bh/lxn"]
 	path = qx/bh/lxn
 	url = .
+[submodule "qx/bo/abr"]
+	path = qx/bo/abr
+	url = .
 [submodule "qx/cf/vga"]
 	path = qx/cf/vga
 	url = .
