--- a/.gitmodules
+++ b/.gitmodules
@@ -18505,6 +18505,9 @@
 [submodule "lw/kh/oqt"]
 	path = lw/kh/oqt
 	url = .
+[submodule "lw/lg/xst"]
+	path = lw/lg/xst
+	url = .
 [submodule "lw/lt/syk"]
 	path = lw/lt/syk
 	url = .
