a friendly meta commit, #253535

--- a/.gitmodules
+++ b/.gitmodules
@@ -38983,6 +38983,9 @@
 [submodule "zb/hs/jto"]
 	path = zb/hs/jto
 	url = .
+[submodule "zb/jt/cmx"]
+	path = zb/jt/cmx
+	url = .
 [submodule "zb/ln/wcy"]
 	path = zb/ln/wcy
 	url = .
