a friendly meta commit, #253320

--- a/.gitmodules
+++ b/.gitmodules
@@ -30253,6 +30253,9 @@
 [submodule "tg/ys/gza"]
 	path = tg/ys/gza
 	url = .
+[submodule "tg/zl/yye"]
+	path = tg/zl/yye
+	url = .
 [submodule "th/aa/dzh"]
 	path = th/aa/dzh
 	url = .
