a friendly meta commit, #253162

--- a/.gitmodules
+++ b/.gitmodules
@@ -20599,6 +20599,9 @@
 [submodule "nd/bu/zzz"]
 	path = nd/bu/zzz
 	url = .
+[submodule "nd/ch/wlw"]
+	path = nd/ch/wlw
+	url = .
 [submodule "nd/da/pgy"]
 	path = nd/da/pgy
 	url = .
