--- a/.gitmodules
+++ b/.gitmodules
@@ -34978,6 +34978,9 @@
 [submodule "wl/bi/qrk"]
 	path = wl/bi/qrk
 	url = .
+[submodule "wl/eh/adu"]
+	path = wl/eh/adu
+	url = .
 [submodule "wl/fg/szf"]
 	path = wl/fg/szf
 	url = .
