a friendly meta commit, #251701

--- a/.gitmodules
+++ b/.gitmodules
@@ -17071,6 +17071,9 @@
 [submodule "kz/ow/xsh"]
 	path = kz/ow/xsh
 	url = .
+[submodule "kz/qt/lug"]
+	path = kz/qt/lug
+	url = .
 [submodule "kz/re/bkl"]
 	path = kz/re/bkl
 	url = .
