--- a/.gitmodules
+++ b/.gitmodules
@@ -26188,6 +26188,9 @@
 [submodule "qr/zd/kyb"]
 	path = qr/zd/kyb
 	url = .
+[submodule "qs/bu/imr"]
+	path = qs/bu/imr
+	url = .
 [submodule "qs/bw/plr"]
 	path = qs/bw/plr
 	url = .
