a friendly meta commit, #252929

--- a/.gitmodules
+++ b/.gitmodules
@@ -15514,6 +15514,9 @@
 [submodule "jx/sa/jlb"]
 	path = jx/sa/jlb
 	url = .
+[submodule "jx/sb/adw"]
+	path = jx/sb/adw
+	url = .
 [submodule "jx/sn/jbv"]
 	path = jx/sn/jbv
 	url = .
