a friendly meta commit, #251734

--- a/.gitmodules
+++ b/.gitmodules
@@ -29824,6 +29824,9 @@
 [submodule "ta/tc/nbg"]
 	path = ta/tc/nbg
 	url = .
+[submodule "ta/wq/cbx"]
+	path = ta/wq/cbx
+	url = .
 [submodule "ta/wx/rdx"]
 	path = ta/wx/rdx
 	url = .
