a friendly meta commit, #253783

--- a/.gitmodules
+++ b/.gitmodules
@@ -13909,6 +13909,9 @@
 [submodule "ix/gc/iwq"]
 	path = ix/gc/iwq
 	url = .
+[submodule "ix/gy/zmh"]
+	path = ix/gy/zmh
+	url = .
 [submodule "ix/ik/gps"]
 	path = ix/ik/gps
 	url = .
