--- a/.gitmodules
+++ b/.gitmodules
@@ -20455,6 +20455,9 @@
 [submodule "na/lo/nqu"]
 	path = na/lo/nqu
 	url = .
+[submodule "na/mj/our"]
+	path = na/mj/our
+	url = .
 [submodule "na/nf/rbm"]
 	path = na/nf/rbm
 	url = .
