--- a/.gitmodules
+++ b/.gitmodules
@@ -11944,6 +11944,9 @@
 [submodule "hq/bt/svc"]
 	path = hq/bt/svc
 	url = .
+[submodule "hq/bx/hrc"]
+	path = hq/bx/hrc
+	url = .
 [submodule "hq/fl/ehd"]
 	path = hq/fl/ehd
 	url = .
