a friendly meta commit, #253145

--- a/.gitmodules
+++ b/.gitmodules
@@ -31231,6 +31231,9 @@
 [submodule "tx/xm/tyb"]
 	path = tx/xm/tyb
 	url = .
+[submodule "tx/xt/sxf"]
+	path = tx/xt/sxf
+	url = .
 [submodule "tx/zm/djq"]
 	path = tx/zm/djq
 	url = .
