a friendly meta commit, #254438

--- a/.gitmodules
+++ b/.gitmodules
@@ -25918,6 +25918,9 @@
 [submodule "ql/tq/jeo"]
 	path = ql/tq/jeo
 	url = .
+[submodule "ql/tv/rcs"]
+	path = ql/tv/rcs
+	url = .
 [submodule "ql/wb/oay"]
 	path = ql/wb/oay
 	url = .
