--- a/.gitmodules
+++ b/.gitmodules
@@ -34477,6 +34477,9 @@
 [submodule "wf/be/yup"]
 	path = wf/be/yup
 	url = .
+[submodule "wf/bg/xdx"]
+	path = wf/bg/xdx
+	url = .
 [submodule "wf/fj/dbi"]
 	path = wf/fj/dbi
 	url = .
