a friendly meta commit, #252535

--- a/.gitmodules
+++ b/.gitmodules
@@ -18382,6 +18382,9 @@
 [submodule "lu/nz/awv"]
 	path = lu/nz/awv
 	url = .
+[submodule "lu/oy/ckk"]
+	path = lu/oy/ckk
+	url = .
 [submodule "lu/rz/duy"]
 	path = lu/rz/duy
 	url = .
