--- a/.gitmodules
+++ b/.gitmodules
@@ -20254,6 +20254,9 @@
 [submodule "mw/ub/ovt"]
 	path = mw/ub/ovt
 	url = .
+[submodule "mw/vl/cgc"]
+	path = mw/vl/cgc
+	url = .
 [submodule "mw/vx/ruw"]
 	path = mw/vx/ruw
 	url = .
