a friendly meta commit, #253877

--- a/.gitmodules
+++ b/.gitmodules
@@ -23398,6 +23398,9 @@
 [submodule "ow/jq/tyf"]
 	path = ow/jq/tyf
 	url = .
+[submodule "ow/kb/plw"]
+	path = ow/kb/plw
+	url = .
 [submodule "ow/ll/rpi"]
 	path = ow/ll/rpi
 	url = .
