a friendly meta commit, #251855

--- a/.gitmodules
+++ b/.gitmodules
@@ -25477,6 +25477,9 @@
 [submodule "qh/cx/ayl"]
 	path = qh/cx/ayl
 	url = .
+[submodule "qh/dn/vjw"]
+	path = qh/dn/vjw
+	url = .
 [submodule "qh/ds/ghk"]
 	path = qh/ds/ghk
 	url = .
