--- a/.gitmodules
+++ b/.gitmodules
@@ -22483,6 +22483,9 @@
 [submodule "oi/ja/rtw"]
 	path = oi/ja/rtw
 	url = .
+[submodule "oi/lw/dvw"]
+	path = oi/lw/dvw
+	url = .
 [submodule "oi/pz/gny"]
 	path = oi/pz/gny
 	url = .
