a friendly meta commit, #252346

--- a/.gitmodules
+++ b/.gitmodules
@@ -17998,6 +17998,9 @@
 [submodule "ln/tr/bpb"]
 	path = ln/tr/bpb
 	url = .
+[submodule "ln/tu/ona"]
+	path = ln/tu/ona
+	url = .
 [submodule "ln/tz/wvm"]
 	path = ln/tz/wvm
 	url = .
