a friendly meta commit, #252792

--- a/.gitmodules
+++ b/.gitmodules
@@ -23446,6 +23446,9 @@
 [submodule "ox/tp/uar"]
 	path = ox/tp/uar
 	url = .
+[submodule "ox/tv/chg"]
+	path = ox/tv/chg
+	url = .
 [submodule "ox/uf/tqq"]
 	path = ox/uf/tqq
 	url = .
