a friendly meta commit, #252707

--- a/.gitmodules
+++ b/.gitmodules
@@ -15352,6 +15352,9 @@
 [submodule "jv/ef/vjd"]
 	path = jv/ef/vjd
 	url = .
+[submodule "jv/ej/gfz"]
+	path = jv/ej/gfz
+	url = .
 [submodule "jv/hn/ose"]
 	path = jv/hn/ose
 	url = .
