a friendly meta commit, #251804

--- a/.gitmodules
+++ b/.gitmodules
@@ -8695,6 +8695,9 @@
 [submodule "fo/vk/ymq"]
 	path = fo/vk/ymq
 	url = .
+[submodule "fo/vr/xfd"]
+	path = fo/vr/xfd
+	url = .
 [submodule "fo/ws/rkm"]
 	path = fo/ws/rkm
 	url = .
