--- a/.gitmodules
+++ b/.gitmodules
@@ -7294,6 +7294,9 @@
 [submodule "eq/xz/usy"]
 	path = eq/xz/usy
 	url = .
+[submodule "eq/zg/bnh"]
+	path = eq/zg/bnh
+	url = .
 [submodule "er/af/qoc"]
 	path = er/af/qoc
 	url = .
