a friendly meta commit, #252354

--- a/.gitmodules
+++ b/.gitmodules
@@ -27538,6 +27538,9 @@
 [submodule "rn/yl/trl"]
 	path = rn/yl/trl
 	url = .
+[submodule "rn/ym/hkw"]
+	path = rn/ym/hkw
+	url = .
 [submodule "rn/ys/pla"]
 	path = rn/ys/pla
 	url = .
