a friendly meta commit, #253451

--- a/.gitmodules
+++ b/.gitmodules
@@ -19645,6 +19645,9 @@
 [submodule "mo/hq/csa"]
 	path = mo/hq/csa
 	url = .
+[submodule "mo/ic/ytc"]
+	path = mo/ic/ytc
+	url = .
 [submodule "mo/ix/lal"]
 	path = mo/ix/lal
 	url = .
