a friendly meta commit, #251404

--- a/.gitmodules
+++ b/.gitmodules
@@ -25630,6 +25630,9 @@
 [submodule "qk/ej/ycu"]
 	path = qk/ej/ycu
 	url = .
+[submodule "qk/fi/epk"]
+	path = qk/fi/epk
+	url = .
 [submodule "qk/gi/wqv"]
 	path = qk/gi/wqv
 	url = .
