--- a/.gitmodules
+++ b/.gitmodules
@@ -19519,6 +19519,9 @@
 [submodule "mn/zr/agd"]
 	path = mn/zr/agd
 	url = .
+[submodule "mo/br/tgp"]
+	path = mo/br/tgp
+	url = .
 [submodule "mo/dl/zpe"]
 	path = mo/dl/zpe
 	url = .
