a friendly meta commit, #253722

--- a/.gitmodules
+++ b/.gitmodules
@@ -11752,6 +11752,9 @@
 [submodule "hl/ny/csy"]
 	path = hl/ny/csy
 	url = .
+[submodule "hl/of/rwg"]
+	path = hl/of/rwg
+	url = .
 [submodule "hl/oy/ftj"]
 	path = hl/oy/ftj
 	url = .
