a friendly meta commit, #252622

--- a/.gitmodules
+++ b/.gitmodules
@@ -36436,6 +36436,9 @@
 [submodule "xj/yr/egf"]
 	path = xj/yr/egf
 	url = .
+[submodule "xk/at/mcy"]
+	path = xk/at/mcy
+	url = .
 [submodule "xk/bs/hbi"]
 	path = xk/bs/hbi
 	url = .
