--- a/.gitmodules
+++ b/.gitmodules
@@ -10993,6 +10993,9 @@
 [submodule "gz/hr/scm"]
 	path = gz/hr/scm
 	url = .
+[submodule "gz/jk/krv"]
+	path = gz/jk/krv
+	url = .
 [submodule "gz/jl/bxc"]
 	path = gz/jl/bxc
 	url = .
