a friendly meta commit, #253009

--- a/.gitmodules
+++ b/.gitmodules
@@ -37702,6 +37702,9 @@
 [submodule "yg/kq/iqu"]
 	path = yg/kq/iqu
 	url = .
+[submodule "yg/ne/gft"]
+	path = yg/ne/gft
+	url = .
 [submodule "yg/nm/erk"]
 	path = yg/nm/erk
 	url = .
