a friendly meta commit, #257883

--- a/.gitmodules
+++ b/.gitmodules
@@ -40750,6 +40750,9 @@
 [submodule "zy/rk/yav"]
 	path = zy/rk/yav
 	url = .
+[submodule "zy/td/mor"]
+	path = zy/td/mor
+	url = .
 [submodule "zy/tj/vel"]
 	path = zy/tj/vel
 	url = .
