a friendly meta commit, #256846

--- a/.gitmodules
+++ b/.gitmodules
@@ -13660,6 +13660,9 @@
 [submodule "ir/bj/ewt"]
 	path = ir/bj/ewt
 	url = .
+[submodule "ir/cv/mbb"]
+	path = ir/cv/mbb
+	url = .
 [submodule "ir/dg/ufr"]
 	path = ir/dg/ufr
 	url = .
