a friendly meta commit, #254675

--- a/.gitmodules
+++ b/.gitmodules
@@ -40018,6 +40018,9 @@
 [submodule "zr/pi/ssd"]
 	path = zr/pi/ssd
 	url = .
+[submodule "zr/pk/nnl"]
+	path = zr/pk/nnl
+	url = .
 [submodule "zr/qg/mdp"]
 	path = zr/qg/mdp
 	url = .
