a friendly meta commit, #255578

--- a/.gitmodules
+++ b/.gitmodules
@@ -23851,6 +23851,9 @@
 [submodule "pc/ae/sra"]
 	path = pc/ae/sra
 	url = .
+[submodule "pc/bk/pyn"]
+	path = pc/bk/pyn
+	url = .
 [submodule "pc/dd/thn"]
 	path = pc/dd/thn
 	url = .
