a friendly meta commit, #257195

--- a/.gitmodules
+++ b/.gitmodules
@@ -18421,6 +18421,9 @@
 [submodule "lr/th/orw"]
 	path = lr/th/orw
 	url = .
+[submodule "lr/wm/zpy"]
+	path = lr/wm/zpy
+	url = .
 [submodule "lr/ww/qds"]
 	path = lr/ww/qds
 	url = .
