a friendly meta commit, #256212

--- a/.gitmodules
+++ b/.gitmodules
@@ -19414,6 +19414,9 @@
 [submodule "mi/zz/gss"]
 	path = mi/zz/gss
 	url = .
+[submodule "mj/by/fml"]
+	path = mj/by/fml
+	url = .
 [submodule "mj/fk/bce"]
 	path = mj/fk/bce
 	url = .
