a friendly meta commit, #256609

--- a/.gitmodules
+++ b/.gitmodules
@@ -17719,6 +17719,9 @@
 [submodule "lg/gf/wjf"]
 	path = lg/gf/wjf
 	url = .
+[submodule "lg/gn/qmm"]
+	path = lg/gn/qmm
+	url = .
 [submodule "lg/hp/ofq"]
 	path = lg/hp/ofq
 	url = .
