--- a/.gitmodules
+++ b/.gitmodules
@@ -30589,6 +30589,9 @@
 [submodule "tj/cg/fcl"]
 	path = tj/cg/fcl
 	url = .
+[submodule "tj/cs/tdn"]
+	path = tj/cs/tdn
+	url = .
 [submodule "tj/fy/wcw"]
 	path = tj/fy/wcw
 	url = .
