a friendly meta commit, #256783

--- a/.gitmodules
+++ b/.gitmodules
@@ -22534,6 +22534,9 @@
 [submodule "og/ad/ydv"]
 	path = og/ad/ydv
 	url = .
+[submodule "og/cb/qzg"]
+	path = og/cb/qzg
+	url = .
 [submodule "og/fu/cce"]
 	path = og/fu/cce
 	url = .
