a friendly meta commit, #257590

--- a/.gitmodules
+++ b/.gitmodules
@@ -23818,6 +23818,9 @@
 [submodule "oy/ud/lfc"]
 	path = oy/ud/lfc
 	url = .
+[submodule "oy/wq/srb"]
+	path = oy/wq/srb
+	url = .
 [submodule "oy/wv/rky"]
 	path = oy/wv/rky
 	url = .
