a friendly meta commit, #254582

--- a/.gitmodules
+++ b/.gitmodules
@@ -19810,6 +19810,9 @@
 [submodule "mp/wd/rcb"]
 	path = mp/wd/rcb
 	url = .
+[submodule "mp/xp/qul"]
+	path = mp/xp/qul
+	url = .
 [submodule "mq/ac/dxl"]
 	path = mq/ac/dxl
 	url = .
