a friendly meta commit, #256245

--- a/.gitmodules
+++ b/.gitmodules
@@ -1693,6 +1693,9 @@
 [submodule "bb/hr/wtx"]
 	path = bb/hr/wtx
 	url = .
+[submodule "bb/jz/bys"]
+	path = bb/jz/bys
+	url = .
 [submodule "bb/ki/fpt"]
 	path = bb/ki/fpt
 	url = .
