--- a/.gitmodules
+++ b/.gitmodules
@@ -23497,6 +23497,9 @@
 [submodule "ou/uk/smq"]
 	path = ou/uk/smq
 	url = .
+[submodule "ou/ul/mbm"]
+	path = ou/ul/mbm
+	url = .
 [submodule "ou/up/cxz"]
 	path = ou/up/cxz
 	url = .
