a friendly meta commit, #256883

--- a/.gitmodules
+++ b/.gitmodules
@@ -3427,6 +3427,9 @@
 [submodule "cc/jj/ewq"]
 	path = cc/jj/ewq
 	url = .
+[submodule "cc/mf/tjy"]
+	path = cc/mf/tjy
+	url = .
 [submodule "cc/mr/dwc"]
 	path = cc/mr/dwc
 	url = .
