a friendly meta commit, #256405

--- a/.gitmodules
+++ b/.gitmodules
@@ -20710,6 +20710,9 @@
 [submodule "nc/jo/eai"]
 	path = nc/jo/eai
 	url = .
+[submodule "nc/mi/pfn"]
+	path = nc/mi/pfn
+	url = .
 [submodule "nc/od/omx"]
 	path = nc/od/omx
 	url = .
