a friendly meta commit, #255524

--- a/.gitmodules
+++ b/.gitmodules
@@ -29098,6 +29098,9 @@
 [submodule "sj/mb/bjn"]
 	path = sj/mb/bjn
 	url = .
+[submodule "sj/oy/ilk"]
+	path = sj/oy/ilk
+	url = .
 [submodule "sj/pz/agz"]
 	path = sj/pz/agz
 	url = .
