a friendly meta commit, #257013

--- a/.gitmodules
+++ b/.gitmodules
@@ -6082,6 +6082,9 @@
 [submodule "du/bg/vfy"]
 	path = du/bg/vfy
 	url = .
+[submodule "du/da/pks"]
+	path = du/da/pks
+	url = .
 [submodule "du/ds/hbf"]
 	path = du/ds/hbf
 	url = .
