a friendly meta commit, #256835

--- a/.gitmodules
+++ b/.gitmodules
@@ -31831,6 +31831,9 @@
 [submodule "ud/rn/pvx"]
 	path = ud/rn/pvx
 	url = .
+[submodule "ud/sd/ywt"]
+	path = ud/sd/ywt
+	url = .
 [submodule "ud/sz/srn"]
 	path = ud/sz/srn
 	url = .
