a friendly meta commit, #254771

--- a/.gitmodules
+++ b/.gitmodules
@@ -1354,6 +1354,9 @@
 [submodule "av/ne/tjg"]
 	path = av/ne/tjg
 	url = .
+[submodule "av/tw/wey"]
+	path = av/tw/wey
+	url = .
 [submodule "av/vi/ovd"]
 	path = av/vi/ovd
 	url = .
