--- a/.gitmodules
+++ b/.gitmodules
@@ -16549,6 +16549,9 @@
 [submodule "km/xt/ozv"]
 	path = km/xt/ozv
 	url = .
+[submodule "km/zv/nyy"]
+	path = km/zv/nyy
+	url = .
 [submodule "kn/do/oum"]
 	path = kn/do/oum
 	url = .
