a friendly meta commit, #256202

--- a/.gitmodules
+++ b/.gitmodules
@@ -6145,6 +6145,9 @@
 [submodule "dv/fv/ann"]
 	path = dv/fv/ann
 	url = .
+[submodule "dv/hh/tvr"]
+	path = dv/hh/tvr
+	url = .
 [submodule "dv/hi/rcb"]
 	path = dv/hi/rcb
 	url = .
