--- a/.gitmodules
+++ b/.gitmodules
@@ -13585,6 +13585,9 @@
 [submodule "ip/sm/glj"]
 	path = ip/sm/glj
 	url = .
+[submodule "ip/tc/wie"]
+	path = ip/tc/wie
+	url = .
 [submodule "ip/ux/xfc"]
 	path = ip/ux/xfc
 	url = .
