a friendly meta commit, #257611

--- a/.gitmodules
+++ b/.gitmodules
@@ -27451,6 +27451,9 @@
 [submodule "rg/xs/clu"]
 	path = rg/xs/clu
 	url = .
+[submodule "rg/ze/ubb"]
+	path = rg/ze/ubb
+	url = .
 [submodule "rg/zp/ubj"]
 	path = rg/zp/ubj
 	url = .
