a friendly meta commit, #255934

--- a/.gitmodules
+++ b/.gitmodules
@@ -20959,6 +20959,9 @@
 [submodule "ng/uk/gaf"]
 	path = ng/uk/gaf
 	url = .
+[submodule "ng/vd/yqg"]
+	path = ng/vd/yqg
+	url = .
 [submodule "ng/ve/vyx"]
 	path = ng/ve/vyx
 	url = .
