--- a/.gitmodules
+++ b/.gitmodules
@@ -2710,6 +2710,9 @@
 [submodule "br/zo/tvs"]
 	path = br/zo/tvs
 	url = .
+[submodule "bs/aj/eid"]
+	path = bs/aj/eid
+	url = .
 [submodule "bs/an/mzh"]
 	path = bs/an/mzh
 	url = .
