a friendly meta commit, #255721

--- a/.gitmodules
+++ b/.gitmodules
@@ -38329,6 +38329,9 @@
 [submodule "yn/di/izh"]
 	path = yn/di/izh
 	url = .
+[submodule "yn/fc/pyr"]
+	path = yn/fc/pyr
+	url = .
 [submodule "yn/gz/fzg"]
 	path = yn/gz/fzg
 	url = .
