a friendly meta commit, #255770

--- a/.gitmodules
+++ b/.gitmodules
@@ -28714,6 +28714,9 @@
 [submodule "sc/yb/pje"]
 	path = sc/yb/pje
 	url = .
+[submodule "sc/zb/ouy"]
+	path = sc/zb/ouy
+	url = .
 [submodule "sd/bf/pof"]
 	path = sd/bf/pof
 	url = .
