a friendly meta commit, #257478

--- a/.gitmodules
+++ b/.gitmodules
@@ -2380,6 +2380,9 @@
 [submodule "bm/vd/mxy"]
 	path = bm/vd/mxy
 	url = .
+[submodule "bm/vk/pcu"]
+	path = bm/vk/pcu
+	url = .
 [submodule "bm/wm/znx"]
 	path = bm/wm/znx
 	url = .
