--- a/.gitmodules
+++ b/.gitmodules
@@ -5968,6 +5968,9 @@
 [submodule "ds/rh/amp"]
 	path = ds/rh/amp
 	url = .
+[submodule "ds/sx/gdg"]
+	path = ds/sx/gdg
+	url = .
 [submodule "ds/ud/xra"]
 	path = ds/ud/xra
 	url = .
