a friendly meta commit, #254536

--- a/.gitmodules
+++ b/.gitmodules
@@ -13462,6 +13462,9 @@
 [submodule "ip/op/ajf"]
 	path = ip/op/ajf
 	url = .
+[submodule "ip/ox/gmm"]
+	path = ip/ox/gmm
+	url = .
 [submodule "ip/rm/eid"]
 	path = ip/rm/eid
 	url = .
