a friendly meta commit, #256913

--- a/.gitmodules
+++ b/.gitmodules
@@ -23029,6 +23029,9 @@
 [submodule "on/pk/irn"]
 	path = on/pk/irn
 	url = .
+[submodule "on/qb/ehe"]
+	path = on/qb/ehe
+	url = .
 [submodule "on/qd/fnw"]
 	path = on/qd/fnw
 	url = .
