a friendly meta commit, #255425

--- a/.gitmodules
+++ b/.gitmodules
@@ -9967,6 +9967,9 @@
 [submodule "gg/ql/tap"]
 	path = gg/ql/tap
 	url = .
+[submodule "gg/sa/ywh"]
+	path = gg/sa/ywh
+	url = .
 [submodule "gg/tt/shl"]
 	path = gg/tt/shl
 	url = .
