a friendly meta commit, #254604

--- a/.gitmodules
+++ b/.gitmodules
@@ -30799,6 +30799,9 @@
 [submodule "to/ws/tbd"]
 	path = to/ws/tbd
 	url = .
+[submodule "to/xh/ovo"]
+	path = to/xh/ovo
+	url = .
 [submodule "to/yl/mcy"]
 	path = to/yl/mcy
 	url = .
