--- a/.gitmodules
+++ b/.gitmodules
@@ -4492,6 +4492,9 @@
 [submodule "cv/ur/fkh"]
 	path = cv/ur/fkh
 	url = .
+[submodule "cv/vy/kqz"]
+	path = cv/vy/kqz
+	url = .
 [submodule "cv/wm/act"]
 	path = cv/wm/act
 	url = .
