a friendly meta commit, #255816

--- a/.gitmodules
+++ b/.gitmodules
@@ -15637,6 +15637,9 @@
 [submodule "jx/yg/zmd"]
 	path = jx/yg/zmd
 	url = .
+[submodule "jy/dq/slk"]
+	path = jy/dq/slk
+	url = .
 [submodule "jy/ej/gpo"]
 	path = jy/ej/gpo
 	url = .
