a friendly meta commit, #255627

--- a/.gitmodules
+++ b/.gitmodules
@@ -9367,6 +9367,9 @@
 [submodule "fx/jg/usj"]
 	path = fx/jg/usj
 	url = .
+[submodule "fx/kp/exd"]
+	path = fx/kp/exd
+	url = .
 [submodule "fx/lz/kyc"]
 	path = fx/lz/kyc
 	url = .
