a friendly meta commit, #256767

--- a/.gitmodules
+++ b/.gitmodules
@@ -32437,6 +32437,9 @@
 [submodule "uo/ud/ezi"]
 	path = uo/ud/ezi
 	url = .
+[submodule "uo/yv/rso"]
+	path = uo/yv/rso
+	url = .
 [submodule "up/as/tyl"]
 	path = up/as/tyl
 	url = .
