a friendly meta commit, #254571

--- a/.gitmodules
+++ b/.gitmodules
@@ -32377,6 +32377,9 @@
 [submodule "uq/xr/pwt"]
 	path = uq/xr/pwt
 	url = .
+[submodule "uq/yh/bxr"]
+	path = uq/yh/bxr
+	url = .
 [submodule "uq/yu/svl"]
 	path = uq/yu/svl
 	url = .
