a friendly meta commit, #256718

--- a/.gitmodules
+++ b/.gitmodules
@@ -19099,6 +19099,9 @@
 [submodule "md/nr/yxq"]
 	path = md/nr/yxq
 	url = .
+[submodule "md/oh/lgs"]
+	path = md/oh/lgs
+	url = .
 [submodule "md/pv/hgu"]
 	path = md/pv/hgu
 	url = .
