a friendly meta commit, #256501

--- a/.gitmodules
+++ b/.gitmodules
@@ -39298,6 +39298,9 @@
 [submodule "zc/hm/shv"]
 	path = zc/hm/shv
 	url = .
+[submodule "zc/iq/iaq"]
+	path = zc/iq/iaq
+	url = .
 [submodule "zc/iv/usw"]
 	path = zc/iv/usw
 	url = .
