--- a/.gitmodules
+++ b/.gitmodules
@@ -37753,6 +37753,9 @@
 [submodule "yc/ur/qoj"]
 	path = yc/ur/qoj
 	url = .
+[submodule "yc/vg/ehq"]
+	path = yc/vg/ehq
+	url = .
 [submodule "yc/vl/rha"]
 	path = yc/vl/rha
 	url = .
