a friendly meta commit, #257048

--- a/.gitmodules
+++ b/.gitmodules
@@ -12703,6 +12703,9 @@
 [submodule "ia/wb/kyy"]
 	path = ia/wb/kyy
 	url = .
+[submodule "ib/cb/bef"]
+	path = ib/cb/bef
+	url = .
 [submodule "ib/cc/xzi"]
 	path = ib/cc/xzi
 	url = .
