a friendly meta commit, #256058

--- a/.gitmodules
+++ b/.gitmodules
@@ -40039,6 +40039,9 @@
 [submodule "zp/po/eqn"]
 	path = zp/po/eqn
 	url = .
+[submodule "zp/pp/umm"]
+	path = zp/pp/umm
+	url = .
 [submodule "zp/pw/esq"]
 	path = zp/pw/esq
 	url = .
