--- a/.gitmodules
+++ b/.gitmodules
@@ -15160,6 +15160,9 @@
 [submodule "jo/yq/txz"]
 	path = jo/yq/txz
 	url = .
+[submodule "jo/zk/ugw"]
+	path = jo/zk/ugw
+	url = .
 [submodule "jo/zo/gtm"]
 	path = jo/zo/gtm
 	url = .
