a friendly meta commit, #255195

--- a/.gitmodules
+++ b/.gitmodules
@@ -39577,6 +39577,9 @@
 [submodule "zj/il/qnq"]
 	path = zj/il/qnq
 	url = .
+[submodule "zj/jc/bkb"]
+	path = zj/jc/bkb
+	url = .
 [submodule "zj/kp/kbl"]
 	path = zj/kp/kbl
 	url = .
