a friendly meta commit, #255332

--- a/.gitmodules
+++ b/.gitmodules
@@ -22792,6 +22792,9 @@
 [submodule "ol/sb/fal"]
 	path = ol/sb/fal
 	url = .
+[submodule "ol/uf/xxm"]
+	path = ol/uf/xxm
+	url = .
 [submodule "ol/vx/fil"]
 	path = ol/vx/fil
 	url = .
