--- a/.gitmodules
+++ b/.gitmodules
@@ -20002,6 +20002,9 @@
 [submodule "mr/bi/wkw"]
 	path = mr/bi/wkw
 	url = .
+[submodule "mr/dk/vnp"]
+	path = mr/dk/vnp
+	url = .
 [submodule "mr/du/jfb"]
 	path = mr/du/jfb
 	url = .
