--- a/.gitmodules
+++ b/.gitmodules
@@ -14626,6 +14626,9 @@
 [submodule "jg/li/vrd"]
 	path = jg/li/vrd
 	url = .
+[submodule "jg/lz/scb"]
+	path = jg/lz/scb
+	url = .
 [submodule "jg/nh/xww"]
 	path = jg/nh/xww
 	url = .
