--- a/.gitmodules
+++ b/.gitmodules
@@ -38308,6 +38308,9 @@
 [submodule "yn/nw/ccx"]
 	path = yn/nw/ccx
 	url = .
+[submodule "yn/pf/avw"]
+	path = yn/pf/avw
+	url = .
 [submodule "yn/pv/djm"]
 	path = yn/pv/djm
 	url = .
