a friendly meta commit, #254616

--- a/.gitmodules
+++ b/.gitmodules
@@ -30394,6 +30394,9 @@
 [submodule "th/vo/thh"]
 	path = th/vo/thh
 	url = .
+[submodule "th/wb/ibe"]
+	path = th/wb/ibe
+	url = .
 [submodule "th/wp/xda"]
 	path = th/wp/xda
 	url = .
