--- a/.gitmodules
+++ b/.gitmodules
@@ -20890,6 +20890,9 @@
 [submodule "ne/jo/hnd"]
 	path = ne/jo/hnd
 	url = .
+[submodule "ne/ju/nrc"]
+	path = ne/ju/nrc
+	url = .
 [submodule "ne/lq/gjn"]
 	path = ne/lq/gjn
 	url = .
